--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,12 @@
 		</dependency>
 
 		<dependency>
+			<groupId>org.mapstruct</groupId>
+			<artifactId>mapstruct</artifactId>
+			<version>${mapstruct.version}</version>
+		</dependency>
+
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
@@ -91,27 +97,24 @@
 							<artifactId>lombok</artifactId>
 							<version>${lombok.version}</version>
 						</path>
-						<!-- <path> -->
-						<!-- <groupId>com.querydsl</groupId> -->
-						<!-- <artifactId>querydsl-apt</artifactId> -->
-						<!-- <version>${querydsl.version}</version> -->
-						<!-- <classifier>jpa</classifier> -->
-						<!-- </path> -->
+						<path>
+							<groupId>com.querydsl</groupId>
+							<artifactId>querydsl-apt</artifactId>
+							<version>${querydsl.version}</version>
+							<classifier>jpa</classifier>
+						</path>
+						<path>
+							<groupId>jakarta.persistence</groupId>
+							<artifactId>jakarta.persistence-api</artifactId>
+							<version>2.2.3</version>
+						</path>
+						<path>
+							<groupId>javax.annotation</groupId>
+							<artifactId>javax.annotation-api</artifactId>
+							<version>1.3.1</version>
+						</path>
 					</annotationProcessorPaths>
 				</configuration>
-				<dependencies>
-					<dependency>
-						<groupId>com.querydsl</groupId>
-						<artifactId>querydsl-apt</artifactId>
-						<version>${querydsl.version}</version>
-						<classifier>jpa</classifier>
-					</dependency>
-<!-- 					<dependency> -->
-<!-- 						<groupId>org.hibernate.javax.persistence</groupId> -->
-<!-- 						<artifactId>hibernate-jpa-2.1-api</artifactId> -->
-<!-- 						<version>1.0.0.Final</version> -->
-<!-- 					</dependency> -->
-				</dependencies>
 			</plugin>
 		</plugins>
 	</build>
